--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -38,8 +38,6 @@ html,
 body {
 	height: 100%;
 	line-height: 1;
-	font-family: 'Rubik';
-	font-weight: 300;
 	font-size: 16px;
 }
 
@@ -59,5 +57,5 @@ button {
 
 select {
   background-color: transparent;
-	// color:beige;
+	color:beige;
 }
